--- a/app/src/main/res/layout/fragment_frag_sound_effect.xml
+++ b/app/src/main/res/layout/fragment_frag_sound_effect.xml
@@ -11,20 +11,20 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/tettereButton"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:text="てってれー!"
+                android:text="てってれ"
                 android:textSize="10sp" />
 
             <Button
                 android:id="@+id/namidaButton"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
@@ -32,118 +32,130 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
-                android:text="Button" />
+                android:text="btn" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button7"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button9"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button12"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button13"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button11"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button10"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button14"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button16"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
 
             <Button
                 android:id="@+id/button17"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:text="Button" />
+                android:layout_weight="1"
+                android:text="btn" />
         </TableRow>
     </TableLayout>
 </FrameLayout>
